--- a/blue.html
+++ b/blue.html
@@ -52,7 +52,9 @@
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="red.html">Red</a>
+                <a class="nav-link" aria-current="page" href="index.html"
+                  >Red</a
+                >
               </li>
               <li class="nav-item">
                 <a class="nav-link active" href="blue.html">Blue</a>
